add regression tests

--- a/tests/python/CMakeLists.txt
+++ b/tests/python/CMakeLists.txt
@@ -708,6 +708,7 @@ set(geo_node_tests
   curves/interpolate_curves
   geometry
   instance
+  serial_loops
   mesh_primitives
   mesh
   mesh/extrude
