--- a/source/blender/compositor/realtime_compositor/CMakeLists.txt
+++ b/source/blender/compositor/realtime_compositor/CMakeLists.txt
@@ -72,12 +72,14 @@ set(SRC
   algorithms/intern/morphological_distance_feather.cc
   algorithms/intern/parallel_reduction.cc
   algorithms/intern/smaa.cc
+  algorithms/intern/summed_area_table.cc
   algorithms/intern/symmetric_separable_blur.cc
 
   algorithms/COM_algorithm_morphological_distance.hh
   algorithms/COM_algorithm_morphological_distance_feather.hh
   algorithms/COM_algorithm_parallel_reduction.hh
   algorithms/COM_algorithm_smaa.hh
+  algorithms/COM_algorithm_summed_area_table.hh
   algorithms/COM_algorithm_symmetric_separable_blur.hh
 
   cached_resources/intern/cached_mask.cc
@@ -163,6 +165,10 @@ set(GLSL_SRC
   shaders/compositor_smaa_edge_detection.glsl
   shaders/compositor_smaa_neighborhood_blending.glsl
   shaders/compositor_split_viewer.glsl
+  shaders/compositor_summed_area_table_compute_complete_blocks.glsl
+  shaders/compositor_summed_area_table_compute_complete_x_prologues.glsl
+  shaders/compositor_summed_area_table_compute_complete_y_prologues.glsl
+  shaders/compositor_summed_area_table_compute_incomplete_prologues.glsl
   shaders/compositor_sun_beams.glsl
   shaders/compositor_symmetric_blur.glsl
   shaders/compositor_symmetric_blur_variable_size.glsl
@@ -267,6 +273,7 @@ set(SRC_SHADER_CREATE_INFOS
   shaders/infos/compositor_screen_lens_distortion_info.hh
   shaders/infos/compositor_smaa_info.hh
   shaders/infos/compositor_split_viewer_info.hh
+  shaders/infos/compositor_summed_area_table_info.hh
   shaders/infos/compositor_sun_beams_info.hh
   shaders/infos/compositor_symmetric_blur_info.hh
   shaders/infos/compositor_symmetric_blur_variable_size_info.hh
