Use transform operator for retiming

--- a/source/blender/editors/transform/CMakeLists.txt
+++ b/source/blender/editors/transform/CMakeLists.txt
@@ -52,6 +52,7 @@ set(SRC
   transform_convert_sculpt.cc
   transform_convert_sequencer.c
   transform_convert_sequencer_image.c
+  transform_convert_sequencer_retiming.cc
   transform_convert_tracking.c
   transform_convert_tracking_curves.c
   transform_draw_cursors.c
