Add 3D cursor input node

--- a/source/blender/nodes/geometry/CMakeLists.txt
+++ b/source/blender/nodes/geometry/CMakeLists.txt
@@ -144,6 +144,7 @@ set(SRC
   nodes/node_geo_object_info.cc
   nodes/node_geo_offset_point_in_curve.cc
   nodes/node_geo_offset_sdf_volume.cc
+  nodes/node_geo_operator_3d_cursor.cc
   nodes/node_geo_operator_selection.cc
   nodes/node_geo_operator_selection_set.cc
   nodes/node_geo_points.cc
