--- a/source/blender/nodes/shader/CMakeLists.txt
+++ b/source/blender/nodes/shader/CMakeLists.txt
@@ -117,6 +117,7 @@ set(SRC
   nodes/node_shader_volume_info.cc
   nodes/node_shader_volume_principled.cc
   nodes/node_shader_volume_scatter.cc
+  nodes/node_shader_math_formula.cc
   nodes/node_shader_wavelength.cc
   nodes/node_shader_wireframe.cc
 
