WIP: SVG Thumbnails
Allow SVG files to have previews in the File Browser. Adds
nanosvgrast.h to extern\nanosvg, which is an SVG rasterizer that is an
optional part of the nanosvg source.

--- a/source/blender/imbuf/CMakeLists.txt
+++ b/source/blender/imbuf/CMakeLists.txt
@@ -34,6 +34,7 @@ set(SRC
   intern/format_hdr.cc
   intern/format_png.cc
   intern/format_psd.cc
+  intern/format_svg.cc
   intern/format_targa.cc
   intern/format_tiff.cc
   intern/imageprocess.cc
