--- a/source/blender/makesrna/intern/CMakeLists.txt
+++ b/source/blender/makesrna/intern/CMakeLists.txt
@@ -451,7 +451,7 @@ add_custom_command(
 # Build bf_rna
 set(SRC
   rna_access.cc
-  rna_access_compare_override.c
+  rna_access_compare_override.cc
   rna_path.cc
   ${GENSRC}
 
