move rna_collection.c

--- a/source/blender/makesrna/intern/CMakeLists.txt
+++ b/source/blender/makesrna/intern/CMakeLists.txt
@@ -26,7 +26,7 @@ set(DEFSRC
   rna_cachefile.cc
   rna_camera.cc
   rna_cloth.cc
-  rna_collection.c
+  rna_collection.cc
   rna_color.cc
   rna_constraint.c
   rna_context.c
