move rna_dynamicpaint.c

--- a/source/blender/makesrna/intern/CMakeLists.txt
+++ b/source/blender/makesrna/intern/CMakeLists.txt
@@ -34,7 +34,7 @@ set(DEFSRC
   rna_curveprofile.cc
   rna_curves.cc
   rna_depsgraph.cc
-  rna_dynamicpaint.c
+  rna_dynamicpaint.cc
   rna_fcurve.c
   rna_fluid.c
   rna_gpencil_legacy.c
