--- a/source/blender/makesrna/intern/CMakeLists.txt
+++ b/source/blender/makesrna/intern/CMakeLists.txt
@@ -37,7 +37,7 @@ set(DEFSRC
   rna_dynamicpaint.cc
   rna_fcurve.cc
   rna_fluid.cc
-  rna_gpencil_legacy.c
+  rna_gpencil_legacy.cc
   rna_gpencil_legacy_modifier.cc
   rna_image.cc
   rna_key.c
