move rna_palette.c

--- a/source/blender/makesrna/intern/CMakeLists.txt
+++ b/source/blender/makesrna/intern/CMakeLists.txt
@@ -58,7 +58,7 @@ set(DEFSRC
   rna_object.cc
   rna_object_force.cc
   rna_packedfile.cc
-  rna_palette.c
+  rna_palette.cc
   rna_particle.c
   rna_pointcloud.c
   rna_pose.cc
