move rna_screen.c

--- a/source/blender/makesrna/intern/CMakeLists.txt
+++ b/source/blender/makesrna/intern/CMakeLists.txt
@@ -66,7 +66,7 @@ set(DEFSRC
   rna_rigidbody.c
   rna_rna.c
   rna_scene.cc
-  rna_screen.c
+  rna_screen.cc
   rna_sculpt_paint.c
   rna_sequencer.c
   rna_shader_fx.c
