move dna_genfile.c

--- a/source/blender/makesdna/intern/CMakeLists.txt
+++ b/source/blender/makesdna/intern/CMakeLists.txt
@@ -107,7 +107,7 @@ add_custom_command(
 # Build bf_dna library
 set(SRC
   dna_defaults.c
-  dna_genfile.c
+  dna_genfile.cc
   dna_utils.cc
   ${CMAKE_CURRENT_BINARY_DIR}/dna.c
   ${CMAKE_CURRENT_BINARY_DIR}/dna_verify.c
