--- a/source/blender/editors/object/CMakeLists.txt
+++ b/source/blender/editors/object/CMakeLists.txt
@@ -44,7 +44,7 @@ set(SRC
   object_data_transfer.cc
   object_data_transform.cc
   object_edit.cc
-  object_gpencil_modifier.c
+  object_gpencil_modifier.cc
   object_hook.c
   object_light_linking_ops.cc
   object_modes.cc
