move object_relations.c

--- a/source/blender/editors/object/CMakeLists.txt
+++ b/source/blender/editors/object/CMakeLists.txt
@@ -51,7 +51,7 @@ set(SRC
   object_modifier.cc
   object_ops.cc
   object_random.cc
-  object_relations.c
+  object_relations.cc
   object_remesh.cc
   object_select.c
   object_shader_fx.c
