move object_shapekey.c

--- a/source/blender/editors/object/CMakeLists.txt
+++ b/source/blender/editors/object/CMakeLists.txt
@@ -55,7 +55,7 @@ set(SRC
   object_remesh.cc
   object_select.cc
   object_shader_fx.cc
-  object_shapekey.c
+  object_shapekey.cc
   object_transform.cc
   object_utils.c
   object_vgroup.cc
