move object_utils.c

--- a/source/blender/editors/object/CMakeLists.txt
+++ b/source/blender/editors/object/CMakeLists.txt
@@ -57,7 +57,7 @@ set(SRC
   object_shader_fx.cc
   object_shapekey.cc
   object_transform.cc
-  object_utils.c
+  object_utils.cc
   object_vgroup.cc
   object_volume.c
   object_warp.c
