--- a/source/blender/editors/mesh/CMakeLists.txt
+++ b/source/blender/editors/mesh/CMakeLists.txt
@@ -29,7 +29,7 @@ set(INC
 set(SRC
   editface.cc
   editmesh_add.cc
-  editmesh_add_gizmo.c
+  editmesh_add_gizmo.cc
   editmesh_attribute.cc
   editmesh_automerge.cc
   editmesh_bevel.cc
