--- a/source/blender/editors/mesh/CMakeLists.txt
+++ b/source/blender/editors/mesh/CMakeLists.txt
@@ -37,7 +37,7 @@ set(SRC
   editmesh_extrude.c
   editmesh_extrude_screw.cc
   editmesh_extrude_spin.c
-  editmesh_extrude_spin_gizmo.c
+  editmesh_extrude_spin_gizmo.cc
   editmesh_inset.c
   editmesh_intersect.c
   editmesh_knife.c
