move editmesh_intersect.c

--- a/source/blender/editors/mesh/CMakeLists.txt
+++ b/source/blender/editors/mesh/CMakeLists.txt
@@ -39,7 +39,7 @@ set(SRC
   editmesh_extrude_spin.cc
   editmesh_extrude_spin_gizmo.cc
   editmesh_inset.cc
-  editmesh_intersect.c
+  editmesh_intersect.cc
   editmesh_knife.c
   editmesh_knife_project.cc
   editmesh_loopcut.c
