move editmesh_path.c

--- a/source/blender/editors/mesh/CMakeLists.txt
+++ b/source/blender/editors/mesh/CMakeLists.txt
@@ -44,7 +44,7 @@ set(SRC
   editmesh_knife_project.cc
   editmesh_loopcut.cc
   editmesh_mask_extract.cc
-  editmesh_path.c
+  editmesh_path.cc
   editmesh_polybuild.c
   editmesh_preselect_edgering.c
   editmesh_preselect_elem.c
