move editmesh_preselect_edgering.c

--- a/source/blender/editors/mesh/CMakeLists.txt
+++ b/source/blender/editors/mesh/CMakeLists.txt
@@ -46,7 +46,7 @@ set(SRC
   editmesh_mask_extract.cc
   editmesh_path.cc
   editmesh_polybuild.cc
-  editmesh_preselect_edgering.c
+  editmesh_preselect_edgering.cc
   editmesh_preselect_elem.c
   editmesh_rip.c
   editmesh_rip_edge.c
