--- a/source/blender/editors/mesh/CMakeLists.txt
+++ b/source/blender/editors/mesh/CMakeLists.txt
@@ -49,7 +49,7 @@ set(SRC
   editmesh_preselect_edgering.cc
   editmesh_preselect_elem.cc
   editmesh_rip.c
-  editmesh_rip_edge.c
+  editmesh_rip_edge.cc
   editmesh_select.cc
   editmesh_select_similar.c
   editmesh_tools.cc
