move editlattice_select.c

--- a/source/blender/editors/lattice/CMakeLists.txt
+++ b/source/blender/editors/lattice/CMakeLists.txt
@@ -20,7 +20,7 @@ set(INC_SYS
 )
 
 set(SRC
-  editlattice_select.c
+  editlattice_select.cc
   editlattice_tools.c
   editlattice_undo.c
   lattice_ops.c
