move lattice_ops.c

--- a/source/blender/editors/lattice/CMakeLists.txt
+++ b/source/blender/editors/lattice/CMakeLists.txt
@@ -23,7 +23,7 @@ set(SRC
   editlattice_select.cc
   editlattice_tools.cc
   editlattice_undo.cc
-  lattice_ops.c
+  lattice_ops.cc
 
   lattice_intern.h
 )
