move anim_channels_edit.c

--- a/source/blender/editors/animation/CMakeLists.txt
+++ b/source/blender/editors/animation/CMakeLists.txt
@@ -24,7 +24,7 @@ set(INC_SYS
 
 set(SRC
   anim_channels_defines.cc
-  anim_channels_edit.c
+  anim_channels_edit.cc
   anim_deps.c
   anim_draw.c
   anim_filter.cc
