move anim_deps.c

--- a/source/blender/editors/animation/CMakeLists.txt
+++ b/source/blender/editors/animation/CMakeLists.txt
@@ -25,7 +25,7 @@ set(INC_SYS
 set(SRC
   anim_channels_defines.cc
   anim_channels_edit.cc
-  anim_deps.c
+  anim_deps.cc
   anim_draw.c
   anim_filter.cc
   anim_ipo_utils.c
