move armature_edit.c

--- a/source/blender/editors/armature/CMakeLists.txt
+++ b/source/blender/editors/armature/CMakeLists.txt
@@ -26,7 +26,7 @@ set(INC_SYS
 
 set(SRC
   armature_add.cc
-  armature_edit.c
+  armature_edit.cc
   armature_naming.c
   armature_ops.c
   armature_relations.c
