move armature_skinning.cc

--- a/source/blender/editors/armature/CMakeLists.txt
+++ b/source/blender/editors/armature/CMakeLists.txt
@@ -31,7 +31,7 @@ set(SRC
   armature_ops.cc
   armature_relations.cc
   armature_select.cc
-  armature_skinning.c
+  armature_skinning.cc
   armature_utils.c
   editarmature_undo.cc
   meshlaplacian.cc
