--- a/source/blender/nodes/geometry/CMakeLists.txt
+++ b/source/blender/nodes/geometry/CMakeLists.txt
@@ -176,6 +176,7 @@ set(SRC
   nodes/node_geo_set_shade_smooth.cc
   nodes/node_geo_set_spline_cyclic.cc
   nodes/node_geo_set_spline_resolution.cc
+  nodes/node_geo_shift_for_curve.cc
   nodes/node_geo_simulation_input.cc
   nodes/node_geo_simulation_output.cc
   nodes/node_geo_store_named_attribute.cc
