--- a/tests/python/CMakeLists.txt
+++ b/tests/python/CMakeLists.txt
@@ -690,13 +690,40 @@ if(WITH_COMPOSITOR_CPU)
 
     foreach(comp_test ${compositor_tests})
       add_python_test(
-        compositor_${comp_test}_test
+        compositor_${comp_test}_cpu_test
         ${CMAKE_CURRENT_LIST_DIR}/compositor_render_tests.py
         -blender "${TEST_BLENDER_EXE}"
-        -testdir "${TEST_SRC_DIR}/compositor/${comp_test}"
+        -testdir "${TEST_SRC_DIR}/compositor_cpu/${comp_test}"
         -idiff "${OPENIMAGEIO_IDIFF}"
-        -outdir "${TEST_OUT_DIR}/compositor"
+        -outdir "${TEST_OUT_DIR}/compositor_cpu"
       )
+    endforeach()
+  endif()
+endif()
+
+if(WITH_COMPOSITOR_REALTIME_TEST)
+  if(NOT OPENIMAGEIO_IDIFF)
+    message(WARNING "Disabling Realtime Compositor tests because OIIO idiff does not exist")
+  else()
+    set(compositor_tests
+      color
+      converter
+      filter
+      input
+      output
+      vector
+
+      multiple_node_setups
+    )
+    foreach(comp_test ${compositor_tests})
+        add_python_test(
+          compositor_${comp_test}_realtime_test
+          ${CMAKE_CURRENT_LIST_DIR}/compositor_render_tests.py
+          -blender "${TEST_BLENDER_EXE}"
+          -testdir "${TEST_SRC_DIR}/compositor_realtime/${comp_test}"
+          -idiff "${OPENIMAGEIO_IDIFF}"
+          -outdir "${TEST_OUT_DIR}/compositor_realtime"
+        )
     endforeach()
   endif()
 endif()
