add runtime storage to modifier

--- a/source/blender/editors/space_action/CMakeLists.txt
+++ b/source/blender/editors/space_action/CMakeLists.txt
@@ -12,6 +12,7 @@ set(INC
   ../../gpu
   ../../makesdna
   ../../makesrna
+  ../../modifiers
   ../../windowmanager
   ../../../../intern/guardedalloc
 
