move particle_boids.c

--- a/source/blender/editors/physics/CMakeLists.txt
+++ b/source/blender/editors/physics/CMakeLists.txt
@@ -24,7 +24,7 @@ set(INC_SYS
 
 set(SRC
   dynamicpaint_ops.cc
-  particle_boids.c
+  particle_boids.cc
   particle_edit.c
   particle_edit_undo.c
   particle_object.c
