--- a/source/blender/editors/physics/CMakeLists.txt
+++ b/source/blender/editors/physics/CMakeLists.txt
@@ -25,7 +25,7 @@ set(INC_SYS
 set(SRC
   dynamicpaint_ops.cc
   particle_boids.cc
-  particle_edit.c
+  particle_edit.cc
   particle_edit_undo.cc
   particle_object.c
   physics_fluid.c
